prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_table_literal.nut
// EXPECTED: compile-time error - table literal assigned to array variable
local x: array = { a = 1, b = 2 }
return x
